Adjust text formatting in character descriptions and add readme

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,6 +40,7 @@ main .personagem .imagem {
     position: absolute;
     top: 0;
     left: 120px;
+    text-align: justify;
 
     /* Aplicar caracteristicas do "flex" */
     display: flex;
